# pq_sidra_stationary

./: .gitignore  README.md  pyproject.toml  sidra_data.xlsx  sidra_data_extractor.py  stationarity_processor.py  stationary_data.xlsx
